// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`annotated.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

let x : number = 5;

=====================================output=====================================
// @flow

let x: number = 5;

================================================================================
`;

exports[`anonymous.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function f() {
  return class {};
}

=====================================output=====================================
// @flow

function f() {
  return class {};
}

================================================================================
`;

exports[`big-type.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

let x = {a:{b:{c:{d:{e:{f:{g:{h:{i:{j:
        {k:{l:{m:{n:{o:{p:{q:{r:{s:{t:
        {a:{b:{c:{d:{e:{f:{g:{h:{i:{j:
        {k:{l:{m:{n:{o:{p:{q:{r:{s:{t:
        {a:{b:{c:{d:{e:{f:{g:{h:{i:{j:
        {k:{l:{m:{n:{o:{p:{q:{r:{s:{t:
        {a:{b:{c:{d:{e:{f:{g:{h:{i:{j:
        {k:{l:{m:{n:{o:{p:{q:{r:{s:{t:
        {a:{b:{c:{d:{e:{f:{g:{h:{i:{j:
        {k:{l:{m:{n:{o:{p:{q:{r:{s:{t:
        {a:{b:{c:{d:{e:{f:{g:{h:{i:{j:
        {k:{l:{m:{n:{o:{p:{q:{r:{s:{t:

        "foo"

        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}
        }}}}}}}}}}

=====================================output=====================================
// @flow

let x = {
  a: {
    b: {
      c: {
        d: {
          e: {
            f: {
              g: {
                h: {
                  i: {
                    j: {
                      k: {
                        l: {
                          m: {
                            n: {
                              o: {
                                p: {
                                  q: {
                                    r: {
                                      s: {
                                        t: {
                                          a: {
                                            b: {
                                              c: {
                                                d: {
                                                  e: {
                                                    f: {
                                                      g: {
                                                        h: {
                                                          i: {
                                                            j: {
                                                              k: {
                                                                l: {
                                                                  m: {
                                                                    n: {
                                                                      o: {
                                                                        p: {
                                                                          q: {
                                                                            r: {
                                                                              s: {
                                                                                t: {
                                                                                  a: {
                                                                                    b: {
                                                                                      c: {
                                                                                        d: {
                                                                                          e: {
                                                                                            f: {
                                                                                              g: {
                                                                                                h: {
                                                                                                  i: {
                                                                                                    j: {
                                                                                                      k: {
                                                                                                        l: {
                                                                                                          m: {
                                                                                                            n: {
                                                                                                              o: {
                                                                                                                p: {
                                                                                                                  q: {
                                                                                                                    r: {
                                                                                                                      s: {
                                                                                                                        t: {
                                                                                                                          a: {
                                                                                                                            b: {
                                                                                                                              c: {
                                                                                                                                d: {
                                                                                                                                  e: {
                                                                                                                                    f: {
                                                                                                                                      g: {
                                                                                                                                        h: {
                                                                                                                                          i: {
                                                                                                                                            j: {
                                                                                                                                              k: {
                                                                                                                                                l: {
                                                                                                                                                  m: {
                                                                                                                                                    n: {
                                                                                                                                                      o: {
                                                                                                                                                        p: {
                                                                                                                                                          q: {
                                                                                                                                                            r: {
                                                                                                                                                              s: {
                                                                                                                                                                t: {
                                                                                                                                                                  a: {
                                                                                                                                                                    b: {
                                                                                                                                                                      c: {
                                                                                                                                                                        d: {
                                                                                                                                                                          e: {
                                                                                                                                                                            f: {
                                                                                                                                                                              g: {
                                                                                                                                                                                h: {
                                                                                                                                                                                  i: {
                                                                                                                                                                                    j: {
                                                                                                                                                                                      k: {
                                                                                                                                                                                        l: {
                                                                                                                                                                                          m: {
                                                                                                                                                                                            n: {
                                                                                                                                                                                              o: {
                                                                                                                                                                                                p: {
                                                                                                                                                                                                  q: {
                                                                                                                                                                                                    r: {
                                                                                                                                                                                                      s: {
                                                                                                                                                                                                        t: {
                                                                                                                                                                                                          a: {
                                                                                                                                                                                                            b: {
                                                                                                                                                                                                              c: {
                                                                                                                                                                                                                d: {
                                                                                                                                                                                                                  e: {
                                                                                                                                                                                                                    f: {
                                                                                                                                                                                                                      g: {
                                                                                                                                                                                                                        h: {
                                                                                                                                                                                                                          i: {
                                                                                                                                                                                                                            j: {
                                                                                                                                                                                                                              k: {
                                                                                                                                                                                                                                l: {
                                                                                                                                                                                                                                  m: {
                                                                                                                                                                                                                                    n: {
                                                                                                                                                                                                                                      o: {
                                                                                                                                                                                                                                        p: {
                                                                                                                                                                                                                                          q: {
                                                                                                                                                                                                                                            r: {
                                                                                                                                                                                                                                              s: {
                                                                                                                                                                                                                                                t:
                                                                                                                                                                                                                                                  "foo",
                                                                                                                                                                                                                                              },
                                                                                                                                                                                                                                            },
                                                                                                                                                                                                                                          },
                                                                                                                                                                                                                                        },
                                                                                                                                                                                                                                      },
                                                                                                                                                                                                                                    },
                                                                                                                                                                                                                                  },
                                                                                                                                                                                                                                },
                                                                                                                                                                                                                              },
                                                                                                                                                                                                                            },
                                                                                                                                                                                                                          },
                                                                                                                                                                                                                        },
                                                                                                                                                                                                                      },
                                                                                                                                                                                                                    },
                                                                                                                                                                                                                  },
                                                                                                                                                                                                                },
                                                                                                                                                                                                              },
                                                                                                                                                                                                            },
                                                                                                                                                                                                          },
                                                                                                                                                                                                        },
                                                                                                                                                                                                      },
                                                                                                                                                                                                    },
                                                                                                                                                                                                  },
                                                                                                                                                                                                },
                                                                                                                                                                                              },
                                                                                                                                                                                            },
                                                                                                                                                                                          },
                                                                                                                                                                                        },
                                                                                                                                                                                      },
                                                                                                                                                                                    },
                                                                                                                                                                                  },
                                                                                                                                                                                },
                                                                                                                                                                              },
                                                                                                                                                                            },
                                                                                                                                                                          },
                                                                                                                                                                        },
                                                                                                                                                                      },
                                                                                                                                                                    },
                                                                                                                                                                  },
                                                                                                                                                                },
                                                                                                                                                              },
                                                                                                                                                            },
                                                                                                                                                          },
                                                                                                                                                        },
                                                                                                                                                      },
                                                                                                                                                    },
                                                                                                                                                  },
                                                                                                                                                },
                                                                                                                                              },
                                                                                                                                            },
                                                                                                                                          },
                                                                                                                                        },
                                                                                                                                      },
                                                                                                                                    },
                                                                                                                                  },
                                                                                                                                },
                                                                                                                              },
                                                                                                                            },
                                                                                                                          },
                                                                                                                        },
                                                                                                                      },
                                                                                                                    },
                                                                                                                  },
                                                                                                                },
                                                                                                              },
                                                                                                            },
                                                                                                          },
                                                                                                        },
                                                                                                      },
                                                                                                    },
                                                                                                  },
                                                                                                },
                                                                                              },
                                                                                            },
                                                                                          },
                                                                                        },
                                                                                      },
                                                                                    },
                                                                                  },
                                                                                },
                                                                              },
                                                                            },
                                                                          },
                                                                        },
                                                                      },
                                                                    },
                                                                  },
                                                                },
                                                              },
                                                            },
                                                          },
                                                        },
                                                      },
                                                    },
                                                  },
                                                },
                                              },
                                            },
                                          },
                                        },
                                      },
                                    },
                                  },
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  },
};

================================================================================
`;

exports[`empty.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

=====================================output=====================================
// @flow

================================================================================
`;

exports[`empty-array.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const a3 = [];
(a3[0].f: number);
module.exports = {a3};

=====================================output=====================================
// @flow

const a3 = [];
(a3[0].f: number);
module.exports = { a3 };

================================================================================
`;

exports[`object.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = {
  a: () => {
  return {
    x:
      // comment
      "blah"
    };
  }
}

=====================================output=====================================
// @flow

module.exports = {
  a: () => {
    return {
      x:
        // comment
        "blah",
    };
  },
};

================================================================================
`;

exports[`recursive.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function f(x:number) {
  if (x == 0) return "foo"
  else return {x:f(x-1)}
};

=====================================output=====================================
// @flow

function f(x: number) {
  if (x == 0) return "foo";
  else return { x: f(x - 1) };
}

================================================================================
`;

exports[`type-shadowing.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function outer<T>(y: T) {
  function inner<T>(x: T, z) { inner(x, y); }
}

=====================================output=====================================
// @flow

function outer<T>(y: T) {
  function inner<T>(x: T, z) {
    inner(x, y);
  }
}

================================================================================
`;

exports[`unparsable.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow



var x : number = 5

=====================================output=====================================
// @flow

var x: number = 5;

================================================================================
`;
